infra/k8s/glassgalor-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: glassgalore-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: glassgalore
    template:
        metadata:
            labels:
                app: glassgalore
        spec:
            containers:
                - name: glassgalore
                  image: ashikks123/glassgalore
---
apiVersion: v1
kind: Service
metadata:
    name: glassgalore-srv
spec:
    selector:
        app: glassgalore
    ports:
        - name: glassgalore
          protocol: TCP
          port: 3000
          targetPort: 3000
