infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: glassgalore.fun
          http:
              paths:
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: glassgalore-srv
                            port:
                                number: 3000
